FIND_PACKAGE(MySQL)
FIND_PACKAGE(CURL)

IF(BUILD_SERVICES)
	ADD_SUBDIRECTORY(admin_executor_service)
	ADD_SUBDIRECTORY(admin_service)
	ADD_SUBDIRECTORY(naming_service)
	ADD_SUBDIRECTORY(login_service)
	ADD_SUBDIRECTORY(welcome_service)
ENDIF(BUILD_SERVICES)

IF(BUILD_LOGIN_SYSTEM)
	ADD_SUBDIRECTORY(login_system)
ENDIF(BUILD_LOGIN_SYSTEM)
